fixed modal size on small screen

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -167,6 +167,9 @@ nav {
     padding: 8px;
     width: 100% !important;
   }
+  #func-modal article, #link-mod article {
+      height: 74vh;
+  }
 }
 @media(max-width : 480px){
   .common-para {
